2004-06-20  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-editor-lang.c, cong-attribute-editor.[ch]:
 	Add new function cong_attribute_editor_try_set_value and
 	use it in all attribute editors. Add block of signals in
 	ui change to make operation safer.

	* Makefile.am, cong-glade.[ch], cong-attribute-editor.[ch], cong-util.[ch] : 
 	New file cong-glade that should contain all glade operation in cong.
 
2004-06-20  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-file-import.c, cong-file-selection.h, cong-plugin.c, cong-service-importer.c, cong-service-importer.h, file.c, plugin-docbook.c, plugin-dtd.c, plugin-sgml.c:

	Big overhail of File->Import UI, making use of GtkFileFilter (see bug #144713)

	* cong-file-export.c, cong-file-import.c, cong-file-open.c, cong-file-save.c, cong-file-selection.h, file.c, plugin-save-dispspec.c

	Added list of file filters as an argument; fixed buttons

	-- 0.7.13 --

	* file.c (cong_get_file_name): Use GtkFileChooser rather than GtkFileSelector; we now
	require GTK 2.4 in configure.in

2004-06-19  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-menus.c: Minor menu cleanups

2004-06-18  David Malcolm  <dmalcolm@redhat.com>

	* cong-attribute-editor-lang.c, cong-document.c: 

	Warning fixes

2004-06-18  David Malcolm  <david@davemalcolm.demon.co.uk>

	* xmldata.c (cong_command_add_required_sub_elements): 

	Fix for bug #144575 (entering new elements in documents lacking a DTD)

2004-06-17  David Malcolm  <david@davemalcolm.demon.co.uk>

	* Makefile.am: 
	
	Get comilation flags from configure.in, fixing bug 134747

	* xmledit.c, select.c, cong-source-view.c, cong-edit-find-and-replace.c, cong-document.c: 

	Warning fixes

2004-06-17 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-attribute-editor.c

	Added hook for using new attribute editor for languages

	* Makefile.am, cong-attribute-editor-lang.c, cong-attribute-editor-lang.h
