@@ -1,3 +1,9 @@
+2004-06-21  David Malcolm  <david@davemalcolm.demon.co.uk>
+
+	* Makefile.am, cong-app.c, cong-fake-plugin-hooks.h, plugin-arbitrary.c: 
+
+	Added new plugin for creating documents of arbitrary type
+
 2004-06-20  Nickolay V. Shmyrev <nshmyrev@yandex.ru>
 
 	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-editor-lang.c, cong-attribute-editor.[ch]:
